Collapse - Fix click area of the toggle button

--- a/app/assets/stylesheets/martian_components/components/collapse.sass
+++ b/app/assets/stylesheets/martian_components/components/collapse.sass
@@ -20,6 +20,7 @@ article.component-collapse
       margin: 20px 0 0
       position: relative
       z-index: 0
+      height: 40px
 
       button
         +square(44px)
